--- a/Kubernetes/ReplicaSet/rc-definition.yaml
+++ b/Kubernetes/ReplicaSet/rc-definition.yaml
@@ -4,11 +4,9 @@ metadata:
   name: myapp
   labels:
      app: myapp
-     type: front-end
+     tipo: front-end
 spec:
   replicas: 3
-  selector:
-    app: myapp
   template:
     metadata:
       name: myapp
@@ -17,6 +15,6 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: <Image>
+          image: nginx
           ports:
-            - containerPort: <Port>
+            - containerPort: 80
