--- a/Kubernetes/services/loadbalancer.yaml
+++ b/Kubernetes/services/loadbalancer.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: servicio-clusterip-estatico
+  name: servicio-clusterip
 spec:
   selector: 
     app: movilapp
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - targetPort: 80
       port: 8080
-  clusterIP: 10.43.10.2
