--- a/Kubernetes/services/nodeport.yml
+++ b/Kubernetes/services/nodeport.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: servicio-clusterip-estatico
+  name: servicio-nodeport
 spec:
   selector: 
     app: movilapp
-  type: ClusterIP
+  type: NodePort
   ports:
     - targetPort: 80
       port: 8080
-  clusterIP: 10.43.10.2
+      nodePort: 30050
